# iris-tv

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md
.codex/agents/: repo-mapper.toml  rust-reviewer.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release-arm64.yml  test.yml
docs/: ARCHITECTURE.md
profiles/fan/fan/: generic.toml
profiles/tv/telstar/: generic.toml  tts040490kk.toml  xxx.toml
scripts/: install.sh
src/: discovery.rs  lib.rs  main.rs  scan.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/errors/: mod.rs
src/ir/: mod.rs
src/profiles/: mod.rs
src/server/: mod.rs
src/update/: mod.rs
tests/: cli.rs  core.rs  scan.rs  server.rs
