[package]
name = "iris"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for controlling infrared TVs from a Raspberry Pi"
license = "MIT"

[features]
default = []
rpi-gpio = ["dep:rppal"]

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "process", "rt-multi-thread", "signal"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
