[package]
name = "iris"
version = "1.7.0"
edition = "2024"
description = "Rust CLI for controlling infrared TVs from a Raspberry Pi"
license = "MIT"

[features]
default = []
rpi-gpio = ["dep:rppal"]

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
hex = "0.4"
mdns-sd = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync"] }
toml = "0.9"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4"] }
fs2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
rppal = { version = "0.22", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
